DirOutput/objects/Instance__c.object
<CustomObject>
    <fields>
        <fullName>Administrators__c</fullName>
        <label>Administrators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdminsWithActivityYesterday__c</fullName>
        <label>Admins With Activity Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdminsWithLast30DaysActivity__c</fullName>
        <label>Admins with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdminsWithLast7DaysActivity__c</fullName>
        <label>Admins with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentsWithActivityYesterday__c</fullName>
        <label>Agents with activity yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentsWithLast30DaysActivity__c</fullName>
        <label>Agents with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentsWithLast7DaysActivity__c</fullName>
        <label>Agents with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agents__c</fullName>
        <label>Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllAgentsWithActivityYesterday__c</fullName>
        <formula>AdminsWithActivityYesterday__c +  AgentsWithActivityYesterday__c +  OwnersWithActivityYesterday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents with activity yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllAgentsWithLast30DaysActivity__c</fullName>
        <formula>AdminsWithLast30DaysActivity__c +  AgentsWithLast30DaysActivity__c +  OwnersWithLast30Days_activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllAgentsWithLast7DaysActivity__c</fullName>
        <formula>AdminsWithLast7DaysActivity__c +  AgentsWithLast7DaysActivity__c +  OwnersWithLast7DaysActivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllAgents__c</fullName>
        <formula>Administrators__c +  Agents__c +  Owners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollaboratorsWithActivityYesterday__c</fullName>
        <label>Collaborators with activity yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollaboratorsWithLast30DaysActivity__c</fullName>
        <label>Collaborators with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CollaboratorsWithLast7DaysActivity__c</fullName>
        <label>Collaborators with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collaborators__c</fullName>
        <label>Collaborators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomersWithActivityYesterday__c</fullName>
        <label>Customers with activity yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomersWithLast30daysActivity__c</fullName>
        <label>Customers with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomersWithLast7DaysActivity__c</fullName>
        <label>Customers with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InstanceId__c</fullName>
        <formula>TEXT(Instance_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_ID__c</fullName>
        <label>Instance ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28Admins__c</fullName>
        <label>L28 Admins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28Agents__c</fullName>
        <label>L28 Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28AverageNoOfDaysAdmins__c</fullName>
        <label>L28 Average No. Of Days (Admins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28AverageNoOfDaysAgents__c</fullName>
        <label>L28 Average No. Of Days (Agents)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28AverageNoOfDaysCollaborators__c</fullName>
        <label>L28 Average No. Of Days (Collaborators)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28AverageNoOfDaysOwners__c</fullName>
        <label>L28 Average No. Of Days (Owners)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28Collaborators__c</fullName>
        <label>L28 Collaborators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L28Owners__c</fullName>
        <label>L28 Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnersWithActivityYesterday__c</fullName>
        <label>Owners With Activity Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnersWithLast30Days_activity__c</fullName>
        <label>Owners with last 30 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnersWithLast7DaysActivity__c</fullName>
        <label>Owners with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owners__c</fullName>
        <label>Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatformStatus__c</fullName>
        <label>Platform Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Instance Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Expiry_Date__c&gt;=NOW(),&quot;Trial&quot;,&quot;Expired&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Instance_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Expiry_Date__c</columns>
        <columns>AllAgents__c</columns>
        <columns>Customers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Instance_Name_Cannot_Be_Changed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(PRIORVALUE(Name)!=  Name, AND( $User.FirstName != &quot;Sagar&quot;,$User.FirstName != &quot;Anadi Raj&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot change domain name</errorMessage>
    </validationRules>
</CustomObject>